# Lecture-Scheduler

./: .gitignore  CMakeLists.txt  README.md  main.cpp
